fix: QTab's count and alert attributes look bad when QTabs's align is set to justify #2032

--- a/src/components/tab/tabs.ios.styl
+++ b/src/components/tab/tabs.ios.styl
@@ -25,23 +25,22 @@
   padding $tabs-padding
   min-height $tabs-min-height
 
-  > .q-icon, .q-tab-label
+  .q-tab-icon, .q-tab-label
     transition transform .2s
-  > .q-icon + .q-tab-label
+  .q-tab-icon-parent + .q-tab-label-parent
     margin-top 3px
 
   .q-chip
-    top 5px
-    right 5px
+    top -4px
+    right -10px
     left auto
     min-height auto
     color white
     background alpha($dot-color, .75)
 
   &.active
-    > .q-icon, .q-tab-label
-      transform scale(1.1)
     .q-tab-icon, .q-tab-label
+      transform scale(1.1)
       opacity 1
   &:active
     background rgba(255, 255, 255, .3)
@@ -58,12 +57,18 @@
 
 @media (max-width $breakpoint-sm-max)
   .q-tab
-    &.hide-icon .q-tab-icon,
-    &.hide-label .q-tab-label
+    &.hide-icon .q-tab-icon-parent,
+    &.hide-label .q-tab-label-parent
       display none !important
     &.hide-icon .q-tab-label
       font-size $tabs-big-font-size
       margin-top 0
+  .q-tab-full.hide-none .q-tab-label-parent .q-tab-meta
+    display none
+
+@media (min-width $breakpoint-md-min)
+  .q-tab-full .q-tab-label-parent .q-tab-meta
+    display none
 
 @media (max-width $breakpoint-md-max)
   .q-tabs-head:not(.scrollable)
